add cachyos-repo to pacman.conf - applied when building the iso

--- a/pacman.conf
+++ b/pacman.conf
@@ -100,3 +100,8 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[cachyos-repo]
+SigLevel = Optional TrustAll
+Server = https://cachyos.github.io/$repo/$arch
+
