„pacman.conf“ ändern

--- a/pacman.conf
+++ b/pacman.conf
@@ -92,8 +92,11 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+Include = /etc/pacman.d/mirrorlist
+
+[cachyos]
+Server = https://cachyos.github.io/$repo/$arch
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
@@ -101,7 +104,4 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-[cachyos-repo]
-SigLevel = Optional TrustAll
-Server = https://cachyos.github.io/$repo/$arch
 
