„airootfs/etc/pacman.conf“ ändern

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -96,12 +96,11 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
+[cachyos]
+Server = https://cachyos.github.io/cachyos_repo/x86_64
+
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
-[cachyos-repo]
-SigLevel = Optional TrustAll
-Server = https://cachyos.github.io/$repo/$arch
