„pacman.conf“ ändern

--- a/pacman.conf
+++ b/pacman.conf
@@ -96,7 +96,7 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [cachyos]
-Server = https://cachyos.github.io/$repo/$arch
+Server = https://cachyos.github.io/cachyos_repo/x86_64
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
