added adding keyring-cachyos

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -97,6 +97,7 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [cachyos]
+SigLevel = Optional TrustAll
 Server = https://cachyos.github.io/cachyos_repo/x86_64
 
 # An example of a custom package repository.  See the pacman manpage for
