--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -75,17 +75,17 @@ LocalFileSigLevel = Optional
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[core]
-Include = /etc/pacman.d/mirrorlist
+#[core]
+#Include = /etc/pacman.d/mirrorlist
 
-[extra]
-Include = /etc/pacman.d/mirrorlist
+#[extra]
+#Include = /etc/pacman.d/mirrorlist
 
 #[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[community]
-Include = /etc/pacman.d/mirrorlist
+#[community]
+#Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
@@ -93,15 +93,35 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[multilib]
-Include = /etc/pacman.d/mirrorlist
+#[multilib]
+#Include = /etc/pacman.d/mirrorlist
 
-[cachyos]
-SigLevel = Optional TrustAll
-Server = https://cachyos.github.io/cachyos_repo/x86_64
+#[cachyos]
+#SigLevel = Optional TrustAll
+#Server = https://cachyos.github.io/cachyos_repo/x86_64
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+#
+# arch offline repo
+[core]
+SigLevel = Optional
+Server = file:///root/offline-repos/arch-repo/sync
+
+[extra]
+SigLevel = Optional
+Server = file:///root/offline-repos/arch-repo/sync
+
+[community]
+SigLevel = Optional
+Server = file:///root/offline-repos/arch-repo/sync
+
+#
+# cachyos offline repo
+[cachyos]
+SigLevel = Optional
+Server = file:///root/offline-repos/cachyos-repo/x86_64
