move local db files up one folder

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -110,18 +110,18 @@ LocalFileSigLevel = Optional
 # arch offline repo
 [core]
 SigLevel = Optional
-Server = file:///root/offline-repos/arch-repo/sync
+Server = file:///root/offline-repos
 
 [extra]
 SigLevel = Optional
-Server = file:///root/offline-repos/arch-repo/sync
+Server = file:///root/offline-repos
 
 [community]
 SigLevel = Optional
-Server = file:///root/offline-repos/arch-repo/sync
+Server = file:///root/offline-repos
 
 #
 # cachyos offline repo
 [cachyos]
-SigLevel = Optional
-Server = file:///root/offline-repos/cachyos-repo/x86_64
+SigLevel = Optional TrustAll
+Server = file:///root/offline-repos
