make this as a semi-offline installer where the installer still need internet connection but most of packages are downloaded from local repo. This is good to save time in installation time and for us to debug and develop faster. It is also good in which it install missing or newely added packages online, so we don't worry to update local packages everytime.

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -69,6 +69,30 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
+
+#
+# arch offline repo
+[core]
+SigLevel = Optional
+Server = file:///root/offline-repos
+Include = /etc/pacman.d/mirrorlist
+
+[extra]
+SigLevel = Optional
+Server = file:///root/offline-repos
+Include = /etc/pacman.d/mirrorlist
+
+[community]
+SigLevel = Optional
+Server = file:///root/offline-repos
+Include = /etc/pacman.d/mirrorlist
+
+#
+# cachyos offline repo
+[cachyos]
+SigLevel = Optional TrustAll
+Server = file:///root/offline-repos
+
 #[kde-unstable]
 #Include = /etc/pacman.d/mirrorlist
 
@@ -93,8 +117,8 @@ LocalFileSigLevel = Optional
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 #[cachyos]
 #SigLevel = Optional TrustAll
@@ -105,23 +129,3 @@ LocalFileSigLevel = Optional
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
-#
-# arch offline repo
-[core]
-SigLevel = Optional
-Server = file:///root/offline-repos
-
-[extra]
-SigLevel = Optional
-Server = file:///root/offline-repos
-
-[community]
-SigLevel = Optional
-Server = file:///root/offline-repos
-
-#
-# cachyos offline repo
-[cachyos]
-SigLevel = Optional TrustAll
-Server = file:///root/offline-repos
