add online cachyos as secondary server in pacman.conf

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -92,6 +92,7 @@ Include = /etc/pacman.d/mirrorlist
 [cachyos]
 SigLevel = Optional TrustAll
 Server = file:///root/offline-repos
+Server = https://cachyos.github.io/cachyos_repo/x86_64
 
 #[kde-unstable]
 #Include = /etc/pacman.d/mirrorlist
