change the cachyos repo url and update the keyring to v1-7

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -75,7 +75,7 @@ LocalFileSigLevel = Optional
 [cachyos]
 SigLevel = Optional TrustAll
 Server = file:///root/offline-repos
-Server = https://cachyos.github.io/cachyos_repo/x86_64
+Server = https://aur.cachyos.org/cachyos-aur/x86_64
 
 #
 # arch offline repo
