--- a/pacman.conf
+++ b/pacman.conf
@@ -77,7 +77,7 @@ LocalFileSigLevel = Optional
 
 [cachyos]
 SigLevel = Optional TrustAll
-Server = https://cachyos.github.io/cachyos_repo/x86_64
+Server = https://aur.cachyos.org/cachyos-aur/x86_64
 
 [core]
 Include = /etc/pacman.d/mirrorlist
