change the cachyos repo url and update the keyring to v1-7

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -78,7 +78,7 @@ LocalFileSigLevel = Optional
 
 [cachyos]
 SigLevel = Optional TrustAll
-Server = https://cachyos.github.io/cachyos_repo/x86_64
+Server = https://aur.cachyos.org/cachyos-aur/x86_64
 
 [core]
 Include = /etc/pacman.d/mirrorlist
