--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -32,7 +32,7 @@ Architecture = auto
 # Misc options
 #UseSyslog
 Color
-ILoveCandy
+#ILoveCandy
 #NoProgressBar
 CheckSpace
 #VerbosePkgLists
@@ -71,40 +71,28 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#
-# cachyos offline repos
-#<disabled_v3>[cachyos-x86-64-v3]
-#<disabled_v3>SigLevel = Optional TrustAll
-#<disabled_v3>Server = file:///root/offline-repos/x86_64_v3
-#<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/x86_64_v3
-
-[cachyos]
-SigLevel = Optional TrustAll
-Server = file:///root/offline-repos
-Server = https://aur.cachyos.org/cachyos-aur/x86_64
-
-#
-# arch offline repo
-[core]
-SigLevel = Optional
-Server = file:///root/offline-repos
-Include = /etc/pacman.d/mirrorlist
-
-[extra]
-SigLevel = Optional
-Server = file:///root/offline-repos
-Include = /etc/pacman.d/mirrorlist
-
-[community]
-SigLevel = Optional
-Server = file:///root/offline-repos
-Include = /etc/pacman.d/mirrorlist
-
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
+#
+# cachyos repos
+#<disabled_v3>[cachyos-x86-64-v3]
+#<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/x86_64_v3
+
+[cachyos]
+Server = https://aur.cachyos.org/cachyos-aur/x86_64
+
+[core]
+Include = /etc/pacman.d/mirrorlist
+
+[extra]
+Include = /etc/pacman.d/mirrorlist
+
 #[community-testing]
 #Include = /etc/pacman.d/mirrorlist
+
+[community]
+Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
