enable_v3 script with prepared pacman.confs

--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -32,7 +32,7 @@ Architecture = auto
 # Misc options
 #UseSyslog
 Color
-ILoveCandy
+#ILoveCandy
 #NoProgressBar
 CheckSpace
 #VerbosePkgLists
@@ -75,13 +75,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 #
-# cachyos offline repos
+# cachyos repos
 #<disabled_v3>[cachyos-x86-64-v3]
-#<disabled_v3>SigLevel = Optional TrustAll
 #<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/x86_64_v3
 
 [cachyos]
-SigLevel = Optional TrustAll
 Server = https://aur.cachyos.org/cachyos-aur/x86_64
 
 [core]
