--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -76,6 +76,8 @@ LocalFileSigLevel = Optional
 
 #
 # cachyos repos
+#<disabled_v3>[plasma_x86_64_v3]
+#<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/$repo
 #<disabled_v3>[cachyos-x86-64-v3]
 #<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/x86_64_v3
 
