„airootfs/root/pacman.conf“ ändern

--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -76,13 +76,16 @@ LocalFileSigLevel = Optional
 
 #
 # cachyos repos
-#<disabled_v3>[plasma_x86_64_v3]
-#<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/$repo
-#<disabled_v3>[cachyos-x86-64-v3]
-#<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/x86_64_v3
+#<disabled_v3>[cachyos-desktop-v3]
+#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/$repo
+#<disabled_v3>[cachyos-v3]
+#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/$repo
+
+[cachyos-desktop]
+Server = https://aur.cachyos.org/repo/x86_64/$repo
 
 [cachyos]
-Server = https://aur.cachyos.org/cachyos-aur/x86_64
+Server = https://aur.cachyos.org/repo/x86_64/$repo
 
 [core]
 Include = /etc/pacman.d/mirrorlist
