„airootfs/etc/pacman.conf“ ändern

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -80,9 +80,12 @@ LocalFileSigLevel = Optional
 #<disabled_v3>SigLevel = Optional TrustAll
 #<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/x86_64_v3
 
+
+[cachyos-desktop]
+Server = https://aur.cachyos.org/repo/x86_64/$repo
+
 [cachyos]
-SigLevel = Optional TrustAll
-Server = https://aur.cachyos.org/cachyos-aur/x86_64
+Server = https://aur.cachyos.org/repo/x86_64/$repo
 
 [core]
 Include = /etc/pacman.d/mirrorlist
