„pacman.conf“ ändern

--- a/pacman.conf
+++ b/pacman.conf
@@ -75,9 +75,13 @@ LocalFileSigLevel = Optional
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
+[cachyos-desktop]
+SigLevel = Optional TrustAll
+Server = https://aur.cachyos.org/repo/x86_64/$repo
+
 [cachyos]
 SigLevel = Optional TrustAll
-Server = https://aur.cachyos.org/cachyos-aur/x86_64
+Server = https://aur.cachyos.org/repo/x86_64/$repo
 
 [core]
 Include = /etc/pacman.d/mirrorlist
