„airootfs/root/pacman.conf“ ändern

--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -77,9 +77,9 @@ LocalFileSigLevel = Optional
 #
 # cachyos repos
 #<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/$repo
+#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/cachyos-desktop-v3
 #<disabled_v3>[cachyos-v3]
-#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/$repo
+#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/cachyos-v3
 
 [cachyos-desktop]
 Server = https://aur.cachyos.org/repo/x86_64/$repo
