„airootfs/etc/pacman.conf“ ändern

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -75,10 +75,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 #
-# cachyos offline repos
-#<disabled_v3>[cachyos-x86-64-v3]
-#<disabled_v3>SigLevel = Optional TrustAll
-#<disabled_v3>Server = https://aur.cachyos.org/cachyos-aur/x86_64_v3
+# cachyos repos
+#<disabled_v3>[cachyos-desktop-v3]
+#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/cachyos-desktop-v3
+#<disabled_v3>[cachyos-v3]
+#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/cachyos-v3
 
 
 [cachyos-desktop]
