„pacman.conf“ ändern

--- a/pacman.conf
+++ b/pacman.conf
@@ -77,11 +77,11 @@ LocalFileSigLevel = Optional
 
 [cachyos-desktop]
 SigLevel = Optional TrustAll
-https://aur.cachyos.org/repo/x86_64/cachyos
+Server = https://aur.cachyos.org/repo/x86_64/cachyos
 
 [cachyos]
 SigLevel = Optional TrustAll
-https://aur.cachyos.org/repo/x86_64/cachyos
+Server = https://aur.cachyos.org/repo/x86_64/cachyos
 
 [core]
 Include = /etc/pacman.d/mirrorlist
