--- a/pacman.conf
+++ b/pacman.conf
@@ -77,7 +77,7 @@ LocalFileSigLevel = Optional
 
 [cachyos-desktop]
 SigLevel = Optional TrustAll
-Server = https://aur.cachyos.org/repo/x86_64/cachyos
+Server = https://aur.cachyos.org/repo/x86_64/cachyos-desktop
 
 [cachyos]
 SigLevel = Optional TrustAll
