--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -77,15 +77,15 @@ LocalFileSigLevel = Optional
 #
 # cachyos repos
 #<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/cachyos-desktop-v3
+#<disabled_v3>Server = https://build.cachyos.org/repo/x86_64_v3/cachyos-desktop-v3
 #<disabled_v3>[cachyos-v3]
-#<disabled_v3>Server = https://aur.cachyos.org/repo/x86_64_v3/cachyos-v3
+#<disabled_v3>Server = https://build.cachyos.org/repo/x86_64_v3/cachyos-v3
 
 [cachyos-desktop]
-Server = https://aur.cachyos.org/repo/x86_64/$repo
+Server = https://build.cachyos.org/repo/x86_64/$repo
 
 [cachyos]
-Server = https://aur.cachyos.org/repo/x86_64/$repo
+Server = https://build.cachyos.org/repo/x86_64/$repo
 
 [core]
 Include = /etc/pacman.d/mirrorlist
