--- a/pacman.conf
+++ b/pacman.conf
@@ -76,11 +76,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [cachyos-desktop]
-SigLevel = Optional TrustAll
+SigLevel = PackageRequired
 Server = https://aur.cachyos.org/repo/x86_64/cachyos-desktop
 
 [cachyos]
-SigLevel = Optional TrustAll
+SigLevel = PackageRequired
 Server = https://aur.cachyos.org/repo/x86_64/cachyos
 
 [core]
@@ -109,5 +109,3 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
-
