--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -77,15 +77,19 @@ LocalFileSigLevel = Optional
 #
 # cachyos repos
 #<disabled_v3>[cachyos-desktop-v3]
+#<disabled_v3>SigLevel = PackageRequired
 #<disabled_v3>Server = https://build.cachyos.org/repo/x86_64_v3/cachyos-desktop-v3
 #<disabled_v3>[cachyos-v3]
+#<disabled_v3>SigLevel = PackageRequired
 #<disabled_v3>Server = https://build.cachyos.org/repo/x86_64_v3/cachyos-v3
 
 
 [cachyos-desktop]
+SigLevel = PackageRequired
 Server = https://build.cachyos.org/repo/x86_64/$repo
 
 [cachyos]
+SigLevel = PackageRequired
 Server = https://build.cachyos.org/repo/x86_64/$repo
 
 [core]
