--- a/pacman.conf
+++ b/pacman.conf
@@ -77,11 +77,11 @@ LocalFileSigLevel = Optional
 
 [cachyos-desktop]
 SigLevel = PackageRequired
-Server = https://aur.cachyos.org/repo/x86_64/cachyos-desktop
+Server = https://mirror.cachyos.org/repo/x86_64/cachyos-desktop
 
 [cachyos]
 SigLevel = PackageRequired
-Server = https://aur.cachyos.org/repo/x86_64/cachyos
+Server = https://mirror.cachyos.org/repo/x86_64/cachyos
 
 [core]
 Include = /etc/pacman.d/mirrorlist
