--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -77,16 +77,17 @@ LocalFileSigLevel = Optional
 #
 # cachyos repos
 #<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>Server = https:/mirror.cachyos.org/repo/x86_64_v3/cachyos-desktop-v3
+#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
+
 #<disabled_v3>[cachyos-v3]
-#<disabled_v3>Server = https:/mirror.cachyos.org/repo/x86_64_v3/cachyos-v3
+#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
 
 
 [cachyos-desktop]
-Server = https://mirror.cachyos.org/repo/x86_64/$repo
+Server = Include = /etc/pacman.d/cachyos-mirrorlist
 
 [cachyos]
-Server = https://mirror.cachyos.org/repo/x86_64/$repo
+Server = Include = /etc/pacman.d/cachyos-mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
