--- a/pacman.conf
+++ b/pacman.conf
@@ -77,11 +77,12 @@ LocalFileSigLevel = Optional
 
 [cachyos-desktop]
 SigLevel = PackageRequired
-Server = https://mirror.cachyos.org/repo/x86_64/cachyos-desktop
+Include = /etc/pacman.d/cachyos-mirrorlist
+
 
 [cachyos]
 SigLevel = PackageRequired
-Server = https://mirror.cachyos.org/repo/x86_64/cachyos
+Include = /etc/pacman.d/cachyos-mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
