--- a/pacman.conf
+++ b/pacman.conf
@@ -76,13 +76,13 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [cachyos-desktop]
-SigLevel = PackageRequired
-Include = /etc/pacman.d/cachyos-mirrorlist
+SigLevel = Optional TrustAll
+Server = https://mirror.cachyos.org/repo/x86_64/cachyos-desktop
 
 
 [cachyos]
-SigLevel = PackageRequired
-Include = /etc/pacman.d/cachyos-mirrorlist
+SigLevel = Optional TrustAll
+Server = https://mirror.cachyos.org/repo/x86_64/cachyos
 
 [core]
 Include = /etc/pacman.d/mirrorlist
