--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -76,17 +76,23 @@ LocalFileSigLevel = Optional
 
 #
 # cachyos repos
+
+
+#
+# cachyos repos
+
 #<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>Server = https:/mirror1.cachyos.org/repo/x86_64_v3/cachyos-desktop-v3
+#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
+
 #<disabled_v3>[cachyos-v3]
-#<disabled_v3>Server = https:/mirror1.cachyos.org/repo/x86_64_v3/cachyos-v3
+#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
+
 
 [cachyos-desktop]
-Server = https:/mirror1.cachyos.org/repo/x86_64/$repo
+Include = /etc/pacman.d/cachyos-mirrorlist
 
 [cachyos]
-Server = https:/mirror1.cachyos.org/repo/x86_64/$repo
-
+Include = /etc/pacman.d/cachyos-mirrorlist
 [core]
 Include = /etc/pacman.d/mirrorlist
 
