--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -77,17 +77,20 @@ LocalFileSigLevel = Optional
 #
 # cachyos repos
 #<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
-
+#<disabled_v3>SigLevel = Optional TrustAll
+#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
 #<disabled_v3>[cachyos-v3]
-#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
+#<disabled_v3>SigLevel = Optional TrustAll
+#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
 
 
 [cachyos-desktop]
-Server = Include = /etc/pacman.d/cachyos-mirrorlist
+SigLevel = Optional TrustAll
+Server = https://mirror.cachyos.org/repo/$arch/$repo
 
 [cachyos]
-Server = Include = /etc/pacman.d/cachyos-mirrorlist
+SigLevel = Optional TrustAll
+Server = https://mirror.cachyos.org/repo/$arch/$repo
 
 [core]
 Include = /etc/pacman.d/mirrorlist
