--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -76,23 +76,17 @@ LocalFileSigLevel = Optional
 
 #
 # cachyos repos
-
-
-#
-# cachyos repos
-
 #<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
-
+#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
 #<disabled_v3>[cachyos-v3]
-#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
-
+#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
 
 [cachyos-desktop]
-Include = /etc/pacman.d/cachyos-mirrorlist
+Server = https://mirror.cachyos.org/repo/$arch/$repo
 
 [cachyos]
-Include = /etc/pacman.d/cachyos-mirrorlist
+Server = https://mirror.cachyos.org/repo/$arch/$repo
+
 [core]
 Include = /etc/pacman.d/mirrorlist
 
