--- a/pacman.conf
+++ b/pacman.conf
@@ -77,12 +77,11 @@ LocalFileSigLevel = Optional
 
 [cachyos-desktop]
 SigLevel = Optional TrustAll
-Server = https://mirror.cachyos.org/repo/x86_64/cachyos-desktop
-
+Server = https://mirror.cachyos.org/repo/$arch/$repo
 
 [cachyos]
 SigLevel = Optional TrustAll
-Server = https://mirror.cachyos.org/repo/x86_64/cachyos
+Server = https://mirror.cachyos.org/repo/$arch/$repo
 
 [core]
 Include = /etc/pacman.d/mirrorlist
