--- a/airootfs/root/pacman.conf
+++ b/airootfs/root/pacman.conf
@@ -77,15 +77,15 @@ LocalFileSigLevel = Optional
 #
 # cachyos repos
 #<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
+#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
 #<disabled_v3>[cachyos-v3]
-#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
+#<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
 
 [cachyos-desktop]
-Server = https://mirror.cachyos.org/repo/$arch/$repo
+Include = /etc/pacman.d/cachyos-mirrorlist
 
 [cachyos]
-Server = https://mirror.cachyos.org/repo/$arch/$repo
+Include = /etc/pacman.d/cachyos-mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
