initial work for new cli installer

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -19,8 +19,8 @@ HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -L -C - -f -o %o %u
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
+#UseDelta    = 0.7
 Architecture = auto
-#<disabled_v3>Architecture = x86_64 x86_64_v3
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
@@ -34,9 +34,10 @@ Architecture = auto
 Color
 ILoveCandy
 #NoProgressBar
-CheckSpace
-#VerbosePkgLists
-#ParallelDownloads = 5
+#CheckSpace
+VerbosePkgLists
+DisableDownloadTimeout
+ParallelDownloads = 10
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -67,30 +68,20 @@ LocalFileSigLevel = Optional
 # uncommented to enable the repo.
 #
 
+[cachyos-desktop]
+SigLevel = Optional TrustAll
+Include = /etc/pacman.d/cachyos-mirrorlist
+
+[cachyos]
+SigLevel = Optional TrustAll
+Include = /etc/pacman.d/cachyos-mirrorlist
+
 # The testing repositories are disabled by default. To enable, uncomment the
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
-
-#
-# cachyos repos
-#<disabled_v3>[cachyos-desktop-v3]
-#<disabled_v3>SigLevel = Optional TrustAll
-#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
-#<disabled_v3>[cachyos-v3]
-#<disabled_v3>SigLevel = Optional TrustAll
-#<disabled_v3>Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
-
-
-[cachyos-desktop]
-SigLevel = Optional TrustAll
-Server = https://mirror.cachyos.org/repo/$arch/$repo
-
-[cachyos]
-SigLevel = Optional TrustAll
-Server = https://mirror.cachyos.org/repo/$arch/$repo
 
 [core]
 Include = /etc/pacman.d/mirrorlist
