--- a/pacman.conf
+++ b/pacman.conf
@@ -2,8 +2,6 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
 
 #
 # GENERAL OPTIONS
@@ -33,11 +31,13 @@ Architecture = auto
 # Misc options
 #UseSyslog
 Color
+ILoveCandy
 #TotalDownload
 # We cannot check disk space from within a chroot environment
 #CheckSpace
-#VerbosePkgLists
-ParallelDownloads = 5
+VerbosePkgLists
+DisableDownloadTimeout
+ParallelDownloads = 10
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -72,16 +72,23 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[testing]
-#Include = /etc/pacman.d/mirrorlist
+#Your local repository
+[alci_local_repo]
+SigLevel = Optional TrustedOnly
+Server = file:///home/vl/$repo/$arch
 
 [cachyos-desktop]
 SigLevel = Optional TrustAll
 Server = https://mirror.cachyos.org/repo/$arch/$repo
+#Include = /etc/pacman.d/cachyos-mirrorlist
 
 [cachyos]
 SigLevel = Optional TrustAll
 Server = https://mirror.cachyos.org/repo/$arch/$repo
+#Include = /etc/pacman.d/cachyos-mirrorlist
+
+#[testing]
+#Include = /etc/pacman.d/mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
