--- a/archiso/airootfs/etc/pacman-more.conf
+++ b/archiso/airootfs/etc/pacman-more.conf
@@ -71,15 +71,19 @@ LocalFileSigLevel = Optional
 
 # cachyos repos
 #<disabled_v3>[cachyos-desktop-v3]
+#<disabled_v3>SigLevel = Optional TrustAll
 #<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
 
 #<disabled_v3>[cachyos-v3]
+#<disabled_v3>SigLevel = Optional TrustAll
 #<disabled_v3>Include = /etc/pacman.d/cachyos-v3-mirrorlist
 
 [cachyos-desktop]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/cachyos-mirrorlist
 
 [cachyos]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/cachyos-mirrorlist
 
 # The testing repositories are disabled by default. To enable, uncomment the
