--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -72,10 +72,9 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#Your local repository
-[alci_local_repo]
-SigLevel = Optional TrustedOnly
-Server = file:///home/vl/$repo/$arch
+#[alci_local_repo]
+#SigLevel = Optional TrustedOnly
+#Server = file:///home/vl/$repo/$arch
 
 [cachyos-desktop]
 SigLevel = Optional TrustAll
