--- a/archiso/airootfs/etc/systemd/system/pacman-init.service
+++ b/archiso/airootfs/etc/systemd/system/pacman-init.service
@@ -7,7 +7,7 @@ After=etc-pacman.d-gnupg.mount
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/bin/pacman-key --init
-ExecStart=/usr/bin/pacman-key --populate
+ExecStart=/usr/bin/pacman-key --populate archlinux cachyos
 
 [Install]
 WantedBy=multi-user.target
