--- a/archiso/airootfs/etc/pacman.d/gnupg/gpg.conf
+++ b/archiso/airootfs/etc/pacman.d/gnupg/gpg.conf
@@ -5,8 +5,7 @@ keyserver-options timeout=10
 keyserver-options import-clean
 keyserver-options no-self-sigs-only
 
-keyserver hkp://pool.sks-keyservers.net:80
-keyserver hkps://hkps.pool.sks-keyservers.net:443
+keyserver hkps://keyserver.ubuntu.com:443
+keyserver hkps://keys.openpgp.org
+keyserver hkps://hkps.pool.sks-keyservers.net
 keyserver hkp://ipv4.pool.sks-keyservers.net:11371
-
-
