--- a/archiso/airootfs/etc/systemd/system/pacman-init.service
+++ b/archiso/airootfs/etc/systemd/system/pacman-init.service
@@ -1,13 +1,16 @@
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 [Unit]
 Description=Initializes Pacman keyring
-Requires=etc-pacman.d-gnupg.mount
-After=etc-pacman.d-gnupg.mount
+Wants=haveged.service
+After=haveged.service
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/bin/pacman-key --init
-ExecStart=/usr/bin/pacman-key --populate archlinux cachyos
+ExecStart=/usr/bin/pacman-key --populate
 
 [Install]
 WantedBy=multi-user.target
